# plannen_fast_api

./: .env.example  .env.gpg  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SETUP_COMPLETE.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.sh  setup_db.sh  verify_setup.py
alembic/: env.py
alembic/versions/: 001_initial_migration_create_items_table.py  deaa3b802b02_initial.py  e110cfe725a6_initial.py
app/: constants.py  main.py
app/api/v1/: items.py  plan.py  plannen.py
app/core/: config.py  db.py  dependencies.py
app/db/: base.py  elasticsearch.py
app/exceptions/: __init__.py  handlers.py
app/mappers/: plan.py  plannen.py
app/models/: __init__.py  base.py  enums.py  events.py  item.py  listeners.py  plan.py
app/openapi/: schema.py
app/schemas/: __init__.py  errors.py  item.py  plan.py  plannen.py  query.py  response.py
app/scripts/: index_es.py  upgrade_storage.py
app/search/: __init__.py  elasticsearch.py  index.py  indexer.py  query.py
app/search/mapping/: plannen.py
app/services/: item_service.py  plan.py  plan_service.py  plannen.py
app/skos/: __init__.py
app/storage/: conent_manager.py
scripts/: local_reset_db.sh  reset_db.sh  reset_db_test.sh
tests/: __init__.py  conftest.py  test.env  test_functional.py  test_mapper.py
tests/app/api/v1/: test_plannen.py
